--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,9 +2,7 @@ spring:
   application:
     name: HR-App
   profiles:
-    active: ${ACTIVE_PROFILES:prod}
+    active: ${ACTIVE_PROFILES:'dev, h2'}
 
 server:
   port: ${SERVER_PORT:8090}
-#logging:
-#  level: INFO
