Create Test domain layer to test connection to the database

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,8 +1,7 @@
 logging:
   level:
-    web: warn
+    root: warn
 
-#spring:
 #  datasource:
 #    initialization-mode: always
 #    schema: classpath*:database/initDB.sql
