--- a/src/main/resources/application-postgres.yml
+++ b/src/main/resources/application-postgres.yml
@@ -8,4 +8,4 @@ spring:
     database-platform: org.hibernate.dialect.PostgreSQL10Dialect
     database: postgresql
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
